Fix/kanbanScrollBarUi

--- a/src/app/body/kanban-board/kanban-board.component.css
+++ b/src/app/body/kanban-board/kanban-board.component.css
@@ -30,6 +30,15 @@
     background-color: var(--secondary-bg);
 }
 
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--scrollbar-color); 
+    border-radius: 10px;
+}
+
 .btn {
     color: var(--text);
     background-color: var(--secondary-bg);
